see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Jun-2011 Christophe Demko
 # [#26135] Remove wrong background on bluestork login (Rouven Weßling)
 # [#26128] Sync admin layouts (hathor) (Rouven Weßling, Andrea Tarr)

11-Jun-2011 Jean-Marie Simonet
 - # Revert [#25041] Module Menu Assignment Enhancements. Breaks 1.6.x existing sites. See feature tracker.

10-Jun-2011 Christophe Demko
 # [#25248] Systematic elimination of DS as directory separator - Final round
 # [#26107] RTL issues with trunk (Ofer Cohen)
 # [#26121] wrong output of mod_custom (Mark Visser)
 # [#24137] Decide and document what value the required attribute takes for JForm. (Rune Sjøen)
 # [#26119] Update TinyMCE to version 3.4.3 (Rouven Weßling)
 # [#26084] Don't always load Mootools (More) in the backend - this time for real (Rouven Weßling)
 # [#26112] Remove unnecessary file from CodeMirror (Rouven Weßling)
 # [#26069] Don't render <meta name="rights"> when it has no content. (Rune Sjøen)
 # [#25275] User profile fields are empty after submitting form with error in user fieldset (Piotr Mocko)

10-Jun-2011 Mark Dexter
 + [#25041] Module Menu Assignment Enhancements (David Harvard)

10-Jun-2011 Jean-Marie Simonet
 # [#26118] *Multibyte spaces search broken. Thanks Chris and Jonathan.
 # Updating admin components xmls to version 1.7
 # Updating admin manifests and modules xmls to version 1.7
 # Updating site components xmls to version 1.7
 # Updating admin templates xmls to version 1.7
 # Updating main en-GB and localise xmls to version 1.7
 + Adding default empty en-GB.override.ini
 # Updating site modules xmls to version 1.7
 # Updating plugins xmls to version 1.7